Fixed problem with publish list item title truncation.

--- a/src-gwt/org/opencms/gwt/client/ui/css/listItemWidget.css
+++ b/src-gwt/org/opencms/gwt/client/ui/css/listItemWidget.css
@@ -158,6 +158,7 @@ div.itemIcon{
 	font-weight: bold;
     vertical-align: middle;
     white-space: nowrap;
+    display: inline;
 }
 .titleRow{}
 @if user.agent ie6 {
